# auto_ML

./: README.md  config.yaml  pyproject.toml
auto_ml/preprocessing/: __init__.py
automl_lib/pipeline/: controller.py
data/: example.csv
