[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-ml"
version = "0.0.0"
description = "AutoML pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.20",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "scipy>=1.9",
  "joblib>=1.2",
  "PyYAML>=6.0",
  "pydantic>=2.6",
  "optuna>=3.0",
  "matplotlib>=3.7",
  "plotly>=5.0",
]

[project.optional-dependencies]
shap = ["shap>=0.42"]
boost = ["xgboost", "lightgbm", "catboost"]

[tool.setuptools]
packages = [
  "automl_lib",
  "automl_lib.types",
  "automl_lib.plugins",
  "automl_lib.training",
  "automl_lib.clearml",
  "automl_lib.inference",
  "automl_lib.preprocessing",
  "automl_lib.phases",
  "automl_lib.data",
  "automl_lib.phases.training",
  "automl_lib.phases.data_registration",
  "automl_lib.phases.data_editing",
  "automl_lib.phases.inference",
  "automl_lib.phases.comparison",
  "automl_lib.phases.preprocessing",
]
